js/css/custom.css
/* Note that bootstrap 3 media sizes are as follows:
  @media(max-width:767px){}  // xs
  @media(min-width:768px){}  // sm
  @media(min-width:992px){}  // md
  @media(min-width:1200px){} // lg
*/

/*
 * Helper classes that pull-right for displays equal to or
 * larger than the indicated size.
 */
@media (min-width: 768px) {
	.pull-right-sm {
		float: right;
	}
}
@media (min-width: 992px) {
	.pull-right-sm, .pull-right-md {
		float: right;
	}
}
@media (min-width: 1200px) {
	.pull-right-sm, .pull-right-md, .pull-right-lg {
		float: right;
	}
}
/**************************************************************/
/**********         NavBar                *********************/
/**************************************************************/

.navbar-container {
    height: 80px;
}

.nav > li > a {
    padding-left: 30px;
    padding-right: 30px;
    font-size: 14px;
    text-transform: uppercase;
    font-weight: bold;
}

.navbar-brand > span {
    font-size: 30px;
    font-stretch: condensed;
}

.navbar-brand > span > .BRCA {
    color: #C03657;
}

.navbar-brand > span > .exchange {
    color: #E8A2A0;
}

.navbar-brand img {
    width: 180px;
    height: 37px;
    background-color: rgba(54,171,242,0.8);
    border-radius:8px; 
    margin-left: 40px;
    margin-bottom: 10px;
    padding-top: 10px;
    padding-bottom: 6px;
    padding-left: 10px;
    padding-right: 10px;
}



.navbar {
    min-height: 70px; /* XXX This value MUST match the setting in index.js */
    padding-top: 10px
}

.navbar-default .navbar-nav > li > a.active {
   color: #C03657;
}


.navbar-nav li.active span {
   color: #C03657;
}

.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
    background-color: transparent;
}

/**************************************************************/
/**********     Variant Search box       *********************/
/**************************************************************/

.home .search-box {
    padding-top: 60px;
    padding-bottom: 60px;
}

/* change input width to a percentage of its container 
 * font-size is a percentage of its viewpoint width (2.2%)
 *
 * */
.search-box input {
    width: 100%;
    height: 40px;
    border: 1px solid #E8A2A0;
    text-align: left;
    font-size: 1.22em;
    text-indent: 4%;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}

input:focus {
    border: 1px solid #C03657;
    outline: none;
}

.search-box Button {
    border: 0;
}

.search-box Button:hover {
    background-color: transparent;    
}

/**************************************************************/
/**********     Variant pagination        *********************/
/**************************************************************/
.pagination {
	margin: 0;
}

/**************************************************************/
/**********     Homepage text             *********************/
/**************************************************************/

.jumbotron {
    background-color: rgba(169,169,169, 0.13);
    margin: 20px;
}

/**************************************************************/
/**********     Homepage logo             *********************/
/**************************************************************/

li {list-style-type: none;}

.logo-block li {
	float: left;
    width: 300px;
	height: 120px;
    padding: 10px;
    line-height: 90px;
    text-align: center;
}

.logo-block img {
	max-height: 100%;
	max-width: 100%;
	width: auto;
	vertical-align: middle;
}

.logo-block {
	margin: 40px;
    padding-left: 50px;
    padding-right: 30px;
    width: auto;
    text-align: center;
}

#BRCA-Exchange {
    padding: 10px 0px;
}

#GA4GH {
    padding: 0px 10px;
}

#human-variome-project {
    padding: 5px 0px;
}

#ClinGen {
    padding: 5px 0px;
}

#ENIGMA {
    padding: 0px;
}

#CIMBA {
    padding: 0px 10px 0px;
}

/**************************************************************/
/**********     Footer                    *********************/
/**************************************************************/
div#main {
    padding-bottom: 120px;
    border-bottom: 1px solid rgb(220,220,220);
}

.footer {
    position: absolute;
    margin-top: 120px;
    height: 90px;
    width: 100%;
    text-align: center;
    font-size: 15px;
}

.footer img {
    width: 55px;
    padding-top: 10px;
}

.footer li {
    display: inline;
    padding: 20px;
}

.footer ul {
    padding-top: 35px;
    padding-bottom: 30px;
}

/**************************************************************/
/**********     disclaimer                *********************/
/**************************************************************/
.modal-content .markdown {
    padding: 40px;
    text-align: left;
}

.modal-content button {
    margin: 0px 0px 40px 40px;
    text-align: left;
}

/**************************************************************/
/**********     Table                     *********************/
/**************************************************************/


.table.row-clickable tbody > tr {
	cursor: pointer;
}

.table.row-clickable tbody > tr > td > * {
	cursor: text;
}

.row-wrap {
    width: 600px;
    word-wrap: break-word;
    float: left;
}
/**************************************************************/
/**********     Other                     *********************/
/**************************************************************/
html {
    font-size: 10px;
}

.superscript {
	font-size: 80%;
	position: relative;
	top: -10px;
}

@keyframes emphasis {
	from {background-color: bisque;}
	to {background-color: white;}
}

th[role='columnheader']:hover .help, .help-target:hover .help {
	visibility: visible;
}

th[role='columnheader'] .help, .help-target .help {
	visibility: hidden;
}

.markdown img {
	width: 100%
}

.Variant-detail-title {
    margin: 20px;
}

.glyphicon.help {
    margin: 3px;
}

